# fastapi_keycloak_react

./: .env.prod.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  .env.example  .gitignore  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_public_tenants.py  0001_tenant_init.py  0002_public_keycloak_group_id.py  0002_tenant_tasks.py
backend/docker/: .dockerignore  Dockerfile
backend/keycloak/: realm-export.json
backend/scripts/: provision_tenant.py  remove_demo_user.py  scaffold_module.py
backend/src/app/: config.py  main.py
backend/src/app/api/v1/: __init__.py  auth.py  health.py  signup.py
backend/src/app/core/: crypto.py  db.py  deps.py  error_handlers.py  errors.py  keycloak_admin.py  logging.py  middleware.py  oidc.py  rate_limit.py  security.py  security_headers.py  sessions.py  tenancy.py
backend/src/app/modules/tasks/application/: dtos.py  services.py
backend/src/app/modules/tasks/domain/: entities.py  errors.py  ports.py
backend/src/app/modules/tasks/infrastructure/: models.py  repositories.py
backend/src/app/modules/tasks/interface/: router.py  schemas.py
backend/src/app/modules/tenants/: models.py
backend/src/app/modules/tenants/application/: services.py
backend/src/app/modules/tenants/infrastructure/: schema_migrator.py
backend/src/app/modules/tenants/interface/: providers.py  router.py  schemas.py
backend/tests/: conftest.py  test_health.py
backend/tests/core/: test_config_security.py  test_crypto.py  test_deps_security.py  test_http_security.py  test_keycloak_admin.py  test_oidc.py  test_rate_limit.py  test_security_verify.py  test_sessions.py
backend/tests/modules/tasks/: test_domain.py  test_service.py
backend/tests/modules/tenants/: test_admin_endpoints.py  test_provisioning.py  test_signup_endpoint.py
docs/: CLONING.md  MODULES.md  QUICKSTART.md
frontend/: .dockerignore  .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/public/: theme-init.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: auth.ts  client.ts  signup.ts  tasks.ts
frontend/src/auth/: AuthProvider.tsx  access.ts  keycloak.ts
frontend/src/components/: ErrorBoundary.tsx  Header.tsx  LoadingSpinner.tsx  StatusBadge.tsx  TaskCard.tsx  theme-provider.tsx
frontend/src/components/layout/: AppLayout.tsx  AppSidebar.tsx  sidebar-context.tsx
frontend/src/components/ui/: alert-dialog.tsx  form.tsx  sonner.tsx  toggle.tsx
frontend/src/lib/: errors.ts  theme.ts
frontend/src/pages/: HomePage.tsx  NewTaskPage.tsx  ProfilePage.tsx  SignupPage.tsx  TaskDetailPage.tsx  TasksPage.tsx
frontend/src/types/: api.ts
nginx/: nginx.dev.conf  nginx.prod.conf
scripts/: init-template.sh
