[project]
name = "saas-backend"
version = "0.1.0"
description = "Multi-tenant SaaS backend (FastAPI + Postgres + Keycloak)"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=23.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "sqlalchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29.0",
    "alembic>=1.13.3",
    "psycopg[binary]>=3.2.3",
    "httpx>=0.27.2",
    "redis>=5.1.0",
    "structlog>=24.4.0",
    "cryptography>=43.0.0",
    "python-jose[cryptography]>=3.3.0",
    "cachetools>=5.5.0",
    "orjson>=3.10.7",
]

[dependency-groups]
dev = [
    "ruff>=0.6.9",
    "mypy>=1.11.2",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.2",
    "testcontainers[postgres]>=4.8.1",
    "asgi-lifespan>=2.1.0",
    "types-cachetools>=5.5.0",
    "types-python-jose>=3.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E", "F", "W",   # pycodestyle, pyflakes
    "I",             # isort
    "B",             # bugbear
    "UP",            # pyupgrade
    "SIM",           # simplify
    "ASYNC",         # async lints
    "RUF",
]
# E501 handled by the formatter; UP046/UP047 (PEP 695 generics) intentionally off —
# generic Pydantic models are written with Generic[T]/TypeVar for broad compatibility.
ignore = ["E501", "UP046", "UP047"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B008"]
"alembic/**" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
# Strict typing is enforced on application code (src). Tests favour terse fakes
# over full typing, so they're out of the strict gate (run via `make typecheck`).
files = ["src"]
exclude = ["alembic/versions"]

[[tool.mypy.overrides]]
module = ["jose.*", "testcontainers.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
